paragraph brak remove

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1570,6 +1570,11 @@ header {
           font-weight: 400;
           line-height: 26px;
           margin-bottom: 26px;
+          br{
+            @media(max-width: 1440px){
+              display: none;
+            }
+          }
 
           span {
             color: rgba(0, 0, 0, 0.90);
