--- a/css/style.css
+++ b/css/style.css
@@ -1236,6 +1236,11 @@ header .scrolled {
   line-height: 26px;
   margin-bottom: 26px;
 }
+@media (max-width: 1440px) {
+  .benifits-member-section .benifits-inner-box-wrapper .benifits-box .content-box p br {
+    display: none;
+  }
+}
 .benifits-member-section .benifits-inner-box-wrapper .benifits-box .content-box p span {
   color: rgba(0, 0, 0, 0.9);
   font-weight: 500;
