--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1528,6 +1528,9 @@ header {
       background-color: $white;
       padding: 30px 27px;
       transition: 0.3s ease-in-out;
+      @media(max-width: 1440px){
+        padding: 30px 26px;
+      }
 
       .top-icon-content-box {
         display: flex;
