--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1529,7 +1529,7 @@ header {
       padding: 30px 27px;
       transition: 0.3s ease-in-out;
       @media(max-width: 1440px){
-        padding: 30px 26px;
+        padding: 29px 26px;
       }
 
       .top-icon-content-box {
@@ -1658,6 +1658,9 @@ header {
               background-color: $white;
               transition: 0.3s ease-in-out;
               padding: 30px;
+              @media(max-width: 1440px){
+                padding: 29px 30px;
+              }
 
               .quote-box {
                 margin-bottom: 20px;
@@ -1849,6 +1852,9 @@ header {
           line-height: 26px;
           border: 1px solid #4182FF;
           transition: 0.3s ease-in-out;
+          @media(max-width: 1440px){
+            padding: 14px 30px;
+          }
 
           span {
             transition: 0.3s ease-in-out;
@@ -1884,6 +1890,10 @@ header {
           background-color: $white;
           padding: 20px 32px 20px 17px;
           transition: 0.3s ease-in-out;
+          @media(max-width: 1440px){
+            padding-top: 19px;
+            padding-bottom: 19px;
+          }
 
           .icon-box {
             display: flex;
