--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -145,44 +145,48 @@ header {
               &:before {
                 content: '';
                 position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                border-top: 2px solid $theme-color;
-                border-bottom: 2px solid $theme-color;
-                transform: scaleY(2);
-                opacity: 0;
-                transition: .3s;
+                bottom: 0;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 0;
+                height: 2px;
+                background-color: rgba(0, 0, 0, 0.60);
+                // border-top: 2px solid $theme-color;
+                // border-bottom: 2px solid $theme-color;
+                // transform: scaleY(2);
+                // opacity: 0;
+                transition: .3s ease-in-out;
+                transform-origin: center;
               }
 
-              &:after {
-                content: '';
-                position: absolute;
-                top: 2px;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                // background-color: $theme-color;
-                transform: scale(0);
-                opacity: 0;
-                transition: .3s;
-                z-index: -1;
-              }
+              // &:after {
+              //   content: '';
+              //   position: absolute;
+              //   top: 2px;
+              //   left: 0;
+              //   width: 100%;
+              //   height: 100%;
+              //   transform: scale(0);
+              //   opacity: 0;
+              //   transition: .3s;
+              //   z-index: -1;
+              // }
 
               &:hover {
                 // color: #fff;
-                color: $theme-color;
+                color: $black;
+                
 
                 &:before {
-                  transform: scaleY(1);
-                  opacity: 1;
+                  // transform: scaleY(1);
+                  // opacity: 1;
+                  width: 100%;
                 }
 
-                &:after {
-                  transform: scaleY(1);
-                  opacity: 1;
-                }
+                // &:after {
+                //   transform: scaleY(1);
+                //   opacity: 1;
+                // }
               }
 
 
