--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,6 @@ header .header-inner-wrapper .header-inner .left-logo-box a {
 }
 @media (max-width: 991px) {
   header .header-inner-wrapper .header-inner .left-logo-box a {
-    font-size: 14.809px;
     line-height: 19.807px;
   }
 }
@@ -420,8 +419,8 @@ header .scrolled {
 }
 @media (max-width: 1199px) {
   .home-top-content-box .home-top-container .home-top-content-inner .left-content-box h1 {
-    font-size: 32px;
-    font-weight: 600;
+    font-size: 30px;
+    font-weight: 700;
     line-height: 42px;
   }
 }
@@ -430,9 +429,12 @@ header .scrolled {
     padding-right: 20px;
   }
 }
+.home-top-content-box .home-top-container .home-top-content-inner .left-content-box h1 .mobile-break {
+  display: none;
+}
 @media (max-width: 575px) {
-  .home-top-content-box .home-top-container .home-top-content-inner .left-content-box h1 br {
-    display: none;
+  .home-top-content-box .home-top-container .home-top-content-inner .left-content-box h1 .mobile-break {
+    display: block;
   }
 }
 .home-top-content-box .home-top-container .home-top-content-inner .left-content-box h1 span {
@@ -456,7 +458,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .home-top-content-box .home-top-container .home-top-content-inner .left-content-box p {
-    padding-right: 47px;
+    padding-right: 25px;
   }
 }
 @media (max-width: 575px) {
@@ -617,7 +619,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .why-box-wrapper {
-    padding: 80px 0;
+    padding: 90px 0;
   }
 }
 .why-box-wrapper .why-box-inner {
@@ -813,6 +815,11 @@ header .scrolled {
   }
 }
 @media (max-width: 575px) {
+  .why-box-wrapper .why-box-inner .right-box .mobile-note-box .note-box p {
+    padding-right: 29px;
+  }
+}
+@media (max-width: 575px) {
   .why-box-wrapper .why-box-inner .right-box .mobile-note-box .note-box p br {
     display: none;
   }
@@ -823,7 +830,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .billing-section-outer {
-    padding: 80px 0;
+    padding: 70px 0;
   }
 }
 .billing-section-outer .billing-section-inner {
@@ -844,6 +851,11 @@ header .scrolled {
   .billing-section-outer .billing-section-inner {
     grid-template-columns: 1fr;
     gap: 30px;
+  }
+}
+@media (max-width: 575px) {
+  .billing-section-outer .billing-section-inner {
+    border-bottom: 1px solid #ddd;
   }
 }
 .billing-section-outer .billing-section-inner .left-section {
@@ -1112,7 +1124,7 @@ header .scrolled {
     font-size: 27px;
     font-weight: 600;
     line-height: 38px;
-    margin-bottom: 20px;
+    margin-bottom: 22px;
   }
 }
 .billing-section-outer .billing-section-inner .right-section h2 span {
@@ -1141,6 +1153,16 @@ header .scrolled {
 @media (max-width: 991px) {
   .billing-section-outer .billing-section-inner .right-section h5 {
     line-height: 30px;
+    font-size: 18px;
+    margin-bottom: 22px;
+  }
+}
+.billing-section-outer .billing-section-inner .right-section h5 br {
+  display: none;
+}
+@media (max-width: 575px) {
+  .billing-section-outer .billing-section-inner .right-section h5 br {
+    display: block;
   }
 }
 .billing-section-outer .billing-section-inner .right-section h5 span {
@@ -1163,7 +1185,7 @@ header .scrolled {
   .billing-section-outer .billing-section-inner .right-section p {
     font-size: 16px;
     color: rgba(0, 0, 0, 0.8);
-    margin-bottom: 20px;
+    margin-bottom: 52px;
   }
 }
 @media (max-width: 1350px) {
@@ -1194,6 +1216,20 @@ header .scrolled {
     line-height: 30px;
   }
 }
+@media (max-width: 575px) {
+  .billing-section-outer .billing-section-inner .right-section h6 {
+    text-align: center;
+    padding-bottom: 70px;
+  }
+}
+.billing-section-outer .billing-section-inner .right-section h6 br {
+  display: none;
+}
+@media (max-width: 575px) {
+  .billing-section-outer .billing-section-inner .right-section h6 br {
+    display: block;
+  }
+}
 .billing-section-outer .billing-section-inner .right-section h6 span {
   color: #1492EE;
 }
@@ -1206,6 +1242,11 @@ header .scrolled {
     padding: 0;
   }
 }
+@media (max-width: 575px) {
+  .who-we-are-section {
+    margin-bottom: 80px;
+  }
+}
 .who-we-are-section .who-we-are-inner {
   display: flex;
   flex-direction: row;
@@ -1216,6 +1257,11 @@ header .scrolled {
   .who-we-are-section .who-we-are-inner {
     flex-direction: column;
     gap: 50px;
+  }
+}
+@media (max-width: 575px) {
+  .who-we-are-section .who-we-are-inner {
+    gap: 35px;
   }
 }
 .who-we-are-section .who-we-are-inner .left-box {
@@ -1279,9 +1325,14 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .who-we-are-section .who-we-are-inner .left-box h2 {
-    font-size: 28px;
+    font-size: 27px;
     font-weight: 600;
     line-height: 38px;
+  }
+}
+@media (max-width: 575px) {
+  .who-we-are-section .who-we-are-inner .left-box h2 {
+    margin-bottom: 22px;
   }
 }
 .who-we-are-section .who-we-are-inner .left-box p {
@@ -1319,6 +1370,11 @@ header .scrolled {
 @media (max-width: 991px) {
   .who-we-are-section .who-we-are-inner .left-box .link-wrapper {
     margin-top: 30px;
+  }
+}
+@media (max-width: 575px) {
+  .who-we-are-section .who-we-are-inner .left-box .link-wrapper {
+    display: none;
   }
 }
 .who-we-are-section .who-we-are-inner .left-box .link-wrapper a {
@@ -1783,6 +1839,64 @@ header .scrolled {
     transform: translate(-50%, -50%) rotate(-1turn);
   }
 }
+.who-we-are-section .mobile-link {
+  display: none;
+  padding: 0 20px;
+  margin-top: 35px;
+}
+@media (max-width: 575px) {
+  .who-we-are-section .mobile-link {
+    display: block;
+  }
+}
+.who-we-are-section .mobile-link .link-wrapper {
+  margin-top: 45px;
+}
+@media (max-width: 991px) {
+  .who-we-are-section .mobile-link .link-wrapper {
+    margin-top: 30px;
+  }
+}
+.who-we-are-section .mobile-link .link-wrapper a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 26px;
+  border-radius: 8px;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+  max-width: 181px;
+}
+@media (max-width: 991px) {
+  .who-we-are-section .mobile-link .link-wrapper a {
+    padding: 10px 30px;
+  }
+}
+@media (max-width: 575px) {
+  .who-we-are-section .mobile-link .link-wrapper a {
+    max-width: 100%;
+  }
+}
+.who-we-are-section .mobile-link .link-wrapper a span {
+  transition: 0.3s ease-in-out;
+}
+.who-we-are-section .mobile-link .link-wrapper a:first-child {
+  color: white;
+  background-color: #4182FF;
+  padding: 14px 25px;
+  border: 1px solid #4182FF;
+}
+.who-we-are-section .mobile-link .link-wrapper a:first-child:hover {
+  background-color: transparent;
+  color: #4182FF;
+}
+.who-we-are-section .mobile-link .link-wrapper a:first-child:hover span {
+  transform: translateX(12px);
+}
 
 .fusion-section {
   position: relative;
@@ -1793,7 +1907,8 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .fusion-section {
-    padding: 80px 0 0 0;
+    padding: 80px 0 51px 0;
+    margin-bottom: 70px;
   }
 }
 .fusion-section::before {
@@ -1884,6 +1999,11 @@ header .scrolled {
     line-height: 38px;
   }
 }
+@media (max-width: 575px) {
+  .fusion-section .fusion-inner .left-section h2 {
+    font-size: 27px;
+  }
+}
 .fusion-section .fusion-inner .right-section {
   padding-left: 50px;
 }
@@ -1953,7 +2073,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .key-services-section {
-    margin-bottom: 50px;
+    margin-bottom: 0px;
   }
 }
 .key-services-section .key-services-inner {
@@ -1965,7 +2085,9 @@ header .scrolled {
 @media (max-width: 991px) {
   .key-services-section .key-services-inner {
     flex-direction: column;
-    gap: 50px;
+    gap: 25px;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 70px;
   }
 }
 .key-services-section .key-services-inner .left-section {
@@ -2029,7 +2151,7 @@ header .scrolled {
 @media (max-width: 575px) {
   .key-services-section .key-services-inner .left-section .left-inner .up-text-wrapper {
     border-radius: 12px;
-    padding: 10px 8px;
+    padding: 15px 14px 17px 14px;
   }
 }
 .key-services-section .key-services-inner .left-section .left-inner .up-text-wrapper h2 {
@@ -2050,6 +2172,7 @@ header .scrolled {
   .key-services-section .key-services-inner .left-section .left-inner .up-text-wrapper h2 {
     font-size: 24px;
     line-height: 34px;
+    margin-bottom: 7px;
   }
 }
 .key-services-section .key-services-inner .left-section .left-inner .up-text-wrapper p {
@@ -2059,6 +2182,11 @@ header .scrolled {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+}
+@media (max-width: 991px) {
+  .key-services-section .key-services-inner .left-section .left-inner .up-text-wrapper p {
+    font-size: 15px;
+  }
 }
 .key-services-section .key-services-inner .left-section .left-inner .up-text-wrapper p span {
   color: white;
@@ -2128,7 +2256,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .key-services-section .key-services-inner .right-section .right-inner .key-services-box .key-box .right-content-box h4 {
-    font-size: 18px;
+    font-size: 17px;
     line-height: 28px;
   }
 }
@@ -2138,6 +2266,11 @@ header .scrolled {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+}
+@media (max-width: 991px) {
+  .key-services-section .key-services-inner .right-section .right-inner .key-services-box .key-box .right-content-box p {
+    font-size: 15px;
+  }
 }
 @media (min-width: 1920px) {
   .key-services-section .key-services-inner .right-section .right-inner .key-services-box .key-box .right-content-box p {
@@ -2161,7 +2294,8 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .benifits-member-section {
-    padding: 50px 0;
+    padding-top: 70px;
+    padding-bottom: 50px;
   }
 }
 .benifits-member-section .benifits-member-inner {
@@ -2179,8 +2313,8 @@ header .scrolled {
 @media (max-width: 991px) {
   .benifits-member-section .benifits-member-inner {
     flex-direction: column;
-    gap: 20px;
-    padding-bottom: 50px;
+    gap: 22px;
+    padding-bottom: 80px;
   }
 }
 .benifits-member-section .benifits-member-inner .left-section {
@@ -2213,7 +2347,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .benifits-member-section .benifits-member-inner .left-section h2 {
-    font-size: 28px;
+    font-size: 27px;
     font-weight: 600;
     line-height: 38px;
   }
@@ -2241,6 +2375,11 @@ header .scrolled {
 @media (min-width: 1920px) {
   .benifits-member-section .benifits-member-inner .right-section p {
     font-size: 18px;
+  }
+}
+@media (max-width: 991px) {
+  .benifits-member-section .benifits-member-inner .right-section p {
+    margin-bottom: 22px;
   }
 }
 .benifits-member-section .benifits-member-inner .right-section .last-para {
@@ -2319,6 +2458,11 @@ header .scrolled {
   font-weight: 600;
   line-height: 30px;
 }
+@media (max-width: 991px) {
+  .benifits-member-section .benifits-inner-box-wrapper .benifits-box .top-icon-content-box .title-content h4 {
+    font-size: 18px;
+  }
+}
 .benifits-member-section .benifits-inner-box-wrapper .benifits-box .content-box p {
   font-weight: 400;
   line-height: 26px;
@@ -2363,7 +2507,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .success-stories-section {
-    padding: 80px 0 30px 0;
+    padding: 70px 0 70px 0;
   }
 }
 .success-stories-section .success-stories-inner .success-stories-container {
@@ -2635,7 +2779,7 @@ header .scrolled {
 }
 @media (max-width: 991px) {
   .management-issues-section {
-    padding: 80px 0 100px 0;
+    padding: 0px 0 90px 0;
   }
 }
 .management-issues-section .management-issues-inner {
@@ -2666,6 +2810,12 @@ header .scrolled {
 @media (max-width: 1350px) {
   .management-issues-section .management-issues-inner .left-section {
     width: 100%;
+  }
+}
+@media (max-width: 991px) {
+  .management-issues-section .management-issues-inner .left-section {
+    padding-top: 70px;
+    border-top: 1px solid #ddd;
   }
 }
 .management-issues-section .management-issues-inner .left-section h2 {
@@ -2810,6 +2960,7 @@ header .scrolled {
   .management-issues-section .management-issues-inner .right-section .management-issues-inner-box .issues-box {
     gap: 12px;
     padding: 15px;
+    align-items: unset;
   }
 }
 .management-issues-section .management-issues-inner .right-section .management-issues-inner-box .issues-box .icon-box {
