--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -514,6 +514,9 @@ header {
           @media(max-width: 991px) {
             padding-right: 20px;
           }
+          @media(max-width: 374px){
+            font-size: 29px;
+          }
           .mobile-break{
             display: none;
             @media(max-width: 575px){
@@ -652,6 +655,10 @@ header {
             @media(max-width: 991px) {
               gap: 20px;
             }
+            @media(max-width: 374px){
+              gap: 10px;
+              justify-content: space-between;
+            }
 
             .counter-box {
               &:first-child {
@@ -678,6 +685,9 @@ header {
                 @media(max-width: 1199px) {
                   font-size: 34px;
                   line-height: 44px;
+                }
+                @media(max-width: 355px){
+                  font-size: 32px;
                 }
               }
 
@@ -1270,6 +1280,9 @@ header {
           font-weight: 600;
           line-height: 38px;
           margin-bottom: 22px;
+        }
+        @media(max-width: 374px){
+          font-size: 25px;
         }
 
         span {
@@ -2425,6 +2438,9 @@ header {
             line-height: 26px;
             @media(max-width: 991px){
               font-size: 15px;
+            }
+            @media(max-width: 365px){
+              font-size: 14px;
             }
 
             span {
